--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    
+    <button class="addButton">Click to add new list item</button>
 </body>
 </html>
